Main page section 1 typo correct

--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
                 <div class="head">We are Closeout Specialists</div>
                 <div class="sub">Closeout Management that gets you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said that you can't have it cheaper, faster, and better all at the same time. To their credit, throughout the year they've been mostly right, but the days where we had to accept this notion are now over. We've reached a new era of connectivity and technology where what was once the norm, is now out of the window. Ontel and its clients are at the forefront of this change, where since our founding we've been trusted with over 1500+ site-projects closeouts all done cheaper, faster, and better at the same time, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
+            <div class="body">For too long people have said that you can't have it cheaper, faster, and better all at the same time. To their credit, throughout the years they've been mostly right, but the days where we had to accept this notion are now over. We've reached a new era of connectivity and technology where what was once the norm, is now out of the window. Ontel and its clients are at the forefront of this change, where since our founding we've been trusted with over 1500+ site-projects closeouts all done cheaper, faster, and better at the same time, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
         <div class="cta-container">
             <div class="cta" ui-sref="find out more">C <i class="icon ion-android-arrow-dropright"></i></div> 
