closeout page par 1 update

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -1,14 +1,14 @@
 <topnav></topnav>
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header closeout">
-    <div class="landing-text">Closeout Packages</div>
+    <div class="landing-text">Closeout Management</div>
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">You give us the specs and raw files. We'll get you and your client paid</div>
+      <div class="heading">You give us the project specifications and your raw site files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Ontel is the largest 3rd party provider of closeout services in the U.S and we are growing. The reason our clients choose us is because they trust that we can represent their companies better than anyone else, whether it's advising on market specifications, providing technical and quality related feedback, working on your behald with the client to straighten out market requirements, or building advanced systems to collect and manage all of the data and scheduling our clients trust us with final milestone needed to get paid. 
+          Ontel is the largest 3rd party provider of closeout services in the U.S and we are growing. The reason we are trusted with millions of dollars in projects is because over time we've developed a deep insight into the problems our clients face. Whether it's undocumentated requirements that a CM pops up, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of market demands, we've been there for our clients time after time to see the project through and their invoices accepted.
         </p>
         <p>
           Companies choose us over hiring or traditional outsourcing providers because we bring results that scale up and down at a whim, all at a fixed low-cost. 
