closeout par 1 update

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -8,7 +8,7 @@
       <div class="heading">You give us the project specifications and your raw site files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Ontel is the largest 3rd party provider of closeout services in the U.S and we are growing. The reason we are trusted with millions of dollars in projects is because over time we've developed a deep insight into the problems our clients face. Whether it's undocumentated requirements that a CM pops up, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of market demands, we've been there for our clients time after time to see the project through and their invoices accepted.
+          Ontel is the largest 3rd party provider of closeout services in the U.S and we are growing. A big reason we are in business is because we've developed a deep insight into the problems our clients face. Whether it's undocumentated requirements that a CM pops up, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we've been there for our clients time after time to see the project through and their invoices accepted.
         </p>
         <p>
           Companies choose us over hiring or traditional outsourcing providers because we bring results that scale up and down at a whim, all at a fixed low-cost. 
