Revision to main page text

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -5,13 +5,13 @@
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">You give us the project specifications and your raw site files. We'll get you and your client paid</div>
+      <div class="heading">Give us the project specifications and your raw site files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Ontel is one of the largest providers of closeout services in the U.S and growing. Our depend on us for our industry knowledge, technical expertise, and our software. Whether it's undocumentated requirements, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we've been there for our clientsto see the project through and their invoices accepted.
+          Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep idustry knowledge and exceptional technology. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
         </p>
         <p>
-          Companies choose us over hiring or traditional outsourcing providers because we bring results that scale up and down at a whim, all at a fixed low-cost. 
+          Companies choose us over hiring or traditional outsourcing providers because of the advantages of our specialization around the closeout process. Our focus brings better results, that scale up and down with demand, all at a low, fixed-cost. 
         </p>
         <p>
           Our closeout services come with a 100% risk-free offer, try us out, and if we can't compete with your existing resources, or if you don't find our service to your liking, we won't charge a cent.
@@ -23,7 +23,7 @@
     <div class="section">
       <div class="heading">How can we lead across quality, speed, and cost?</div>
       <div class="content">
-        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™. Our people matched with this exceptional technology enables us to streamline workflows between remote teams and high-amounts of data. Our specialization in the closeout process allows us to be faster, more focused, and more cost-effective than almost all alternatives.</span>
+        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™ where we automate the processing of Sweep Traces, and centralize project files and workflows. We also create custom project specific scripts and software, for example we've automated ATT's RET value forms, and Verizon BAWA's RF Summary test entry. Our people matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close out faster than anyone else.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -31,11 +31,11 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our C.O.P. services help our customers grow market share</span>
+                  <span>Our C.O.P. services help our customers grow market share and invoice faster</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by billing faster and completing work more profitably</span>
+                  <span>Our customers improve cash-flow by reducing costs completing work more profitably</span>
                 </li>
               </ul>
             </div>
@@ -44,10 +44,9 @@
             <div class="title">Results</div>
             <div class="body">
               <ul>
-                <li>Ontel has less than a 1% rejection rate for 2014-2015 on over 1000+ site projects</li>
-                <li>We close out out over 90% of our sites within 24 calendar hours of receiving materials</li>
-                <li>We are leaders in 3rd party testing, closeout, and management services</li>
-                <li>We set the standard for Verizon in BAWA</li>
+                <li>Ontel has less than a 5% rejection rate for 2014-2016 on over 1500+ site projects, this includes rejections due to undocumented requirements </li>
+                <li>We close out out over 90% of our sites within 24 calendar hours of receiving materials when not using Swift Projects for photo management</li>
+				<li>Our clients typically grow their market-share as a result of closing out faster, nothing signals you're ready for more work than a C.O.P submitted faster than your competition.
               </ul>
             </div>
           </div>
@@ -64,8 +63,8 @@
             <div class="title">Share Client Requirements and Specifications</div>
             <div class="body">
               <ul>
-                <li>Tell us about your project and exchange specification documents which we then distill into a simple, comprehensive market requirement summary</li>
-                <li>We seek out an example of a C.O.P. that the client likes or create a gold standard if needed</li>
+                <li>Tell us about your project and share your project specification documents
+                <li>We seek out an example C.O.P. that the client likes or we can help to create a gold standard if needed</li>
               </ul>
             </div>
           </div>
@@ -73,8 +72,8 @@
             <div class="title">Setup the Systems</div>
             <div class="body">
               <ul>
-                <li>An environment in Swift Projects is set up and people are invited and oriented to it</li>
-                <li>A project is setup in Swift Traces with project specifications programmed to automate sweep processing, validation, and results output</li>
+                <li>An environment with your goals, requirements, and processes is then setup in Swift Projects based on your requirements</li>
+                <li>Depending on your deliverables, we may then start creating custom software applications to automate the processing and validation of key data deliverables like RETS and Tests</li>
               </ul>
             </div>
           </div>
@@ -82,10 +81,10 @@
             <div class="title">Execute the Plan</div>
             <div class="body">
               <ul>
-                <li>We recieve site information and scheduling</li>
-                <li>We review SOW documents for completeness and advise accordingly</li>
-                <li>We provide technical and quality assurance of tests and photos</li>
-                <li>We close the site within your time requirements</li>
+                <li>We recieve site information and scheduling and ensure any SOW specific items are identified in Swift Projects</li>
+                <li>We receive and review your raw files and advise on their accuracy and completeness</li>
+                <li>We compile C.O.P, complete necessary documents, and upload to client portal</li>
+                <li>If rejections occur, we document them and incorporate it into Swift Projects to prevent them from occuring in the future</li>
               </ul>
             </div>
           </div>
@@ -93,7 +92,9 @@
             <div class="title">Optimize Performance</div>
             <div class="body">
               <ul>
-                <li>We analyze performance from data generated from punch items and customer feedback, and with this data adapt systems and people to meet expectations</li>
+                <li>We analyze performance by looking at key metrics such as how long it takes to receive raw data from the field, time taken to compile, QA, etc</li>
+				<li>We then present our findings and solutions and come up with a plan of action to optimize performance</li>
+				<li>This process is repeated at set intervals based on work volume and project timelines</li>
               </ul>
             </div>
           </div>
@@ -105,18 +106,18 @@
     <div class="section">
       <div class="heading">Common C.O.P. Deliverables</div>
       <div class="content">
-        <span>We verify the accuracy of the deliverables for each of the documents below as applicable to the SOW. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document.</span>
+        <span>We check all deliverables for completeness and accuracy. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
               <ul>
-                <li>QA for tests and photos</li>
-                <li>Redline assistance for drawings and RF design</li>
-                <li>Carrier and LL specific forms</li>
-                <li>Punch-item corrections</li>
-                <li>Height Verification Reports</li>
+                <li>Quality assurance for tests and photos</li>
+                <li>Redline assistance for drawings and RF design as-built's</li>
+                <li>Carrier and LL specific forms related with the SOW</li>
+                <li>Punch-item correction tracking and submittal</li>
+                <li>Height Verification reports</li>
                 <li>Antenna Alignment Tool reports</li>
-                <li>RET Screenshots and worksheet</li>
+                <li>RET Screenshots and worksheets</li>
                 <li>Certifications for equipment and people</li>
                 <li>Jobsite safety documents (JSA/JHA)</li>
                 <li>Log Book entries</li>
@@ -134,14 +135,14 @@
       <div class="heading">Site Virtualization</div>
       <div class="content">
         <span>
-          As part of a closeout for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set, in these cases Ontel can provide site virtualization services such as HD video and photogrammetry with 3D mapping services.
+          As part of a closeout for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set, such as a drone flyover, photogrammetry, etc. We advise and help our clients meet these new demands, don't hesitate to ask about how to accommodate for these new types of requirements.
         </span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
               <ul>
-                <li>3D high definition cell site renderings</li>
-                <li>Point clouds for surveying</li>
+                <li>Drone audits</li>
+                <li>Photogrammatic Point clouds</li>
               </ul>
             </div>
           </div>
