--- a/views/main.html
+++ b/views/main.html
@@ -29,9 +29,9 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">We are Closeout Specialists</div>
-                <div class="sub">Closeout Management that gets you paid, Starting at $199 per site-project.</div>
+                <div class="sub">Closeout Services that gets you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said that you can't have it cheaper, faster, and better all at the same time. To their credit, throughout the years they've been mostly right, but the days where we had to accept this are now over. We've reached a new era of connectivity and technology where what was once the norm, is now out of the window. Ontel and its clients are at the forefront of this change, where since our founding we've been trusted with over 1500+ site-projects closeouts all done cheaper, faster, and better at the same time, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
+            <div class="body">For too long people have said that you can't have it cheaper, faster, and better all at the same time. Those days now over. We've reached a new era of technology where previous paradigms are no longer true. Ontel and its clients are at the forefront of this change. Since our founding we've been trusted with over 1500+ site-projects closeouts all done cheaper, faster, and better all at the same time, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">Closeout MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
@@ -43,7 +43,7 @@
                 <div class="head">Closeout Software</div>
                 <div class="sub">The most powerful closeout software in the world, that even mom and pop can use.</div>
             </div>
-            <div class="body">Swift Projects™ is simply the best way to manage and close telecommunication projects for general contractors and engineering firms. We've combined products like SharePoint and Dropbox, and added innovation found no where else together to make a mobile friendly, robust, software platform built specifically for wireless projects that allows users to organize complex projects, enable teams to QA complete work, submit closeout photos and videos live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can deliver profit to your project.</span></div>
+            <div class="body">Swift Projects™ is the secret to our success, and now it can be yours. We've combined aspects of products like SharePoint and Dropbox, and added innovation found no where else to make a mobile friendly, robust, software platform built specifically for wireless projects. Swift Projects enables teams to QA and close out live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can take you to the next level.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
