--- a/views/main.html
+++ b/views/main.html
@@ -41,7 +41,7 @@
         <div class="section-content ">
             <div class="heading">
                 <div class="head">Closeout Software</div>
-                <div class="sub">The most powerful closeout software in the world, that even mom and pop can use.</div>
+                <div class="sub">The most powerful closeout software in the world, starting at $99 per month.</div>
             </div>
             <div class="body">Swift Projects™ is the secret to our success, and now it can be yours. We've combined aspects of products like SharePoint and Dropbox, and added innovation found no where else to make a mobile friendly, robust, software platform built specifically for wireless projects. Swift Projects enables teams to QA and close out live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can take you to the next level.</span></div>
         </div>
