Pricing page update
Removed pricing for testing, management, etc.

--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,10 +11,9 @@
           <div>
             <div class="body">
               <ul>
-                <li>Free setup and orientation for small businesses</li>
-                <li><span class="price-emphasis">$50</span> per user per month - includes 1TB of data per user</li>
-                <li><span class="price-emphasis">$60</span> per site average for asset-project setup in Swift Projects</li>
-                <li>Education, charity, and government discounts available</li>
+                <li>Free initial organization setup and orientation for small businesses of 20 users or less</li>
+                <li><span class="price-emphasis">$99</span> for up to 20 managed users, and unlimited guests - includes 1TB of data per user</li>
+				<li><span class="price-emphasis">Contact us</span> for quotes on additional users and data</li>
               </ul>
             </div>
           </div>
@@ -26,92 +25,14 @@
     <div class="section">
       <div class="heading">Closeout Packages</div>
       <div class="content">
-        <span>Apply 15% discount for C.O.P.’s done with Swift Projects</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225</span> for any carrier - 16 business hours or less (<span class="price-emphasis">$190</span> w/ Swift Projects)</li>
-                <li><span class="price-emphasis">$99</span> for LL (Crown, SBA, etc.)</li>
-                <li><span class="price-emphasis">$40</span> revision fee for corrections based on workmanship or missing files when raw data is reported complete</li>
-                <li>Apply an additional 10% discount for closeouts processed over 16 business hours from our receipt of source files</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="product-container">
-    <div class="section">
-      <div class="heading">Testing (Retainer-Based)</div>
-      <div class="content">
-        <span><span class="price-emphasis">$3200</span> per technician for a 1-week retainer. <span class="price-emphasis">$6100</span> per technician for a 2-week retainer. Each week of your retainer period includes:</span>
-        <div class="feature-flex col-flex list-with-desc">
-          <div>
-            <div class="body">
-              <ul>
-                <li>5 X 10 or 6 X 8-hour days, as many sites as possible per week</li>
-                <li>500 miles of driving per week ($0.60 per mile after that)</li>
-                <li>$125 overnight fee per night outside of the Washington, DC area</li>
-                <li>Hourly rate applied for market mobilization trips of over 1.5 hours from Washington, DC.</li>
-                <li>Includes testing equipment PIM (2 bands)/Sweep/ATC Lite/JDSU Fiber equipment</li>
-                <li>Includes C.O.P. service for teams using Swift Projects</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="product-container">
-    <div class="section">
-      <div class="heading">Testing (Per-Site-Based)</div>
-      <div class="content">
-        <span><span class="price-emphasis">$700</span> per half day project and <span class="price-emphasis">$1300</span> full day on average.</span>
-        <div class="feature-flex col-flex list-with-desc">
-          <div>
-            <div class="body">
-              <ul>
-                <li>Per site pricing vs retainer is intended for projects that have blocks of consecutively scheduled sites in a week, with a minimum of 3 full-day projects or equivalent required per week</li>
-                <li>A penalty for cancellation less than 48 hours from scheduled date will incur a 50% charge of work scheduled</li>
-                <li>Includes C.O.P. service for teams using Swift Projects</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="product-container">
-    <div class="section">
-      <div class="heading">MGMT (Subject to Bid)</div>
-      <div class="content">
-        <div class="feature-flex col-flex">
-          <div>
-            <div class="body">
-              <ul>
-                <li>Average range of <span class="price-emphasis">$500-1000</span> per site for Project Management</li>
-                <li>Average cost of <span class="price-emphasis">$2000</span> per site for Scoping, BOM, Construction, and C.O.P. management</li>
-                <li>Includes many of our services</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="product-container">
-    <div class="section">
-      <div class="heading">Gear</div>
-      <div class="content">
-        <div class="feature-flex col-flex">
-          <div>
-            <div class="title">onPack™</div>
-            <div class="body">
-              <ul>
-                <li><span class="price-emphasis">$150</span> per crew per month with 10GBs of data, unlimited talk and text</li>
-                <li><span class="price-emphasis">$15</span> per GB after initial 10GB</li>
+                <li><span class="price-emphasis">Base Carrier C.O.P - $225</span> per site-project C.O.P - any carrier package and within 16 business hours (<span class="price-emphasis">$190</span> w/ Swift Projects)</li>
+				<li><span class="price-emphasis">Base Carrier C.O.P using Swift Projects - $199</span> per site-project C.O.P - any carrier package and within 16 business hours for companies that use Swift Projects to manage and execute their projects. Invcluded in this price is our setup of the site requirements in Swift Projects
+                <li><span class="price-emphasis">$74</span> for landlord package (Crown, SBA, etc.), this is charged in addition to the base fee</li>
+                <li><span class="price-emphasis">$39</span> for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for closeout </li>
               </ul>
             </div>
           </div>
