Typo fix to closeout

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -8,7 +8,7 @@
       <div class="heading">Give us the project specifications and your raw site files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep idustry knowledge and exceptional technology. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
+          Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
         </p>
         <p>
           Companies choose us over hiring or traditional outsourcing providers because of the advantages of our specialization around the closeout process. Our focus brings better results, that scale up and down with demand, all at a low, fixed-cost. 
