Updates to closeout, main, and pricing pages

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -11,10 +11,10 @@
           Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
         </p>
         <p>
-          Companies choose us over hiring or traditional outsourcing providers because of the advantages of our specialization around the closeout process. Our focus brings better results, that scale up and down with demand, all at a low, fixed-cost. 
+          Companies choose us over hiring and traditional outsourcing providers because of our specialization around the closeout process and the advantages of focusing on this aspect of the project workflow. Our focus brings better results, that scale up and down with demand, all at a low, fixed-cost. 
         </p>
         <p>
-          Our closeout services come with a 100% risk-free offer, try us out, and if we can't compete with your existing resources, or if you don't find our service to your liking, we won't charge a cent.
+          Our closeout management services come with a 100% risk-free offer, try us out, and if we can't compete with your existing resources, or if you don't find our service to your liking, we won't charge a cent.
         </p>
       </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="section">
       <div class="heading">How can we lead across quality, speed, and cost?</div>
       <div class="content">
-        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™ where we automate the processing of Sweep Traces, and centralize project files and workflows. We also create custom project specific scripts and software, for example we've automated ATT's RET value forms, and Verizon BAWA's RF Summary test entry. Our people matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close out faster than anyone else.</span>
+        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™ where we automate the processing of Anritsu sweep test data, and centralize project files and workflows. We also create custom project specific scripts and software, for example we've automated AT&T's RET value forms, and test data entry Verizon BAWA's RF Summary (which we created for them). Our people matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close out faster than anyone else.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -64,7 +64,7 @@
             <div class="body">
               <ul>
                 <li>Tell us about your project and share your project specification documents
-                <li>We seek out an example C.O.P. that the client likes or we can help to create a gold standard if needed</li>
+                <li>Provide an example C.O.P. that the client likes, or we can help to create a gold standard if needed</li>
               </ul>
             </div>
           </div>
@@ -72,8 +72,8 @@
             <div class="title">Setup the Systems</div>
             <div class="body">
               <ul>
-                <li>An environment with your goals, requirements, and processes is then setup in Swift Projects based on your requirements</li>
-                <li>Depending on your deliverables, we may then start creating custom software applications to automate the processing and validation of key data deliverables like RETS and Tests</li>
+                <li>An environment with your goals, requirements, and processes is then set up in Swift Projects</li>
+                <li>Depending on your deliverables, we may then start creating custom software applications to automate the processing and validation of key data deliverables like RETS and test results</li>
               </ul>
             </div>
           </div>
@@ -81,7 +81,7 @@
             <div class="title">Execute the Plan</div>
             <div class="body">
               <ul>
-                <li>We recieve site information and scheduling and ensure any SOW specific items are identified in Swift Projects</li>
+                <li>We receive site information and scheduling and ensure any SOW specific items are identified in Swift Projects</li>
                 <li>We receive and review your raw files and advise on their accuracy and completeness</li>
                 <li>We compile C.O.P, complete necessary documents, and upload to client portal</li>
                 <li>If rejections occur, we document them and incorporate it into Swift Projects to prevent them from occuring in the future</li>
