--- a/views/pricing.html
+++ b/views/pricing.html
@@ -29,7 +29,7 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">Base Carrier C.O.P - $225</span> per site-project C.O.P - any carrier package and within 16 business hours (<span class="price-emphasis">$190</span> w/ Swift Projects)</li>
+                <li><span class="price-emphasis">Base Carrier C.O.P - $225</span> per site-project C.O.P - any carrier package and within 16 business hours</li>
 				<li><span class="price-emphasis">Base Carrier C.O.P using Swift Projects - $199</span> per site-project C.O.P - any carrier package and within 16 business hours for companies that use Swift Projects to manage and execute their projects. Invcluded in this price is our setup of the site requirements in Swift Projects
                 <li><span class="price-emphasis">$74</span> for landlord package (Crown, SBA, etc.), this is charged in addition to the base fee</li>
                 <li><span class="price-emphasis">$39</span> for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for closeout </li>
