--- a/views/main.html
+++ b/views/main.html
@@ -29,7 +29,7 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">We are Closeout Specialists</div>
-                <div class="sub">Closeout Services that gets you paid, Starting at $199 per site-project.</div>
+                <div class="sub">Closeout Services that get you paid, Starting at $199 per site-project.</div>
             </div>
             <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days now over. We've reached a new era of technology where previous paradigms are no longer true and Ontel and its clients are at the forefront of this change. Since our founding, we've been trusted with over 1500+ site-projects closeouts all done cheaper, faster, and better. Proof, that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
