--- a/views/swift.html
+++ b/views/swift.html
@@ -133,15 +133,15 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Get to know thyself</div>
+      <div class="heading">Be data driven</div>
       <div class="content feature-flex">
         <div>
           <div class="title">Metrics</div>
-          <div class="body">With our expanding data sets and instant dashboards you can measure, analyze, and improve performance</div>
+          <div class="body">With our instant reports and expanding data sets you can measure, analyze, and improve performance with live information on anything you want to track</div>
         </div>
         <div>
           <div class="title">Home Screen</div>
-          <div class="body">Your tasks and those of others that you care about collected in one spot, displayed with the status of each</div>
+          <div class="body">Your tasks and others that you care about collected in one spot, displayed with the latest status in one simple list</div>
         </div>
       </div>
     </div>
