About us update

--- a/views/about.html
+++ b/views/about.html
@@ -6,13 +6,13 @@
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        Founded in 2013, Ontel is a Washington D.C. based company that provides wireless infrastructure services companies business and project management software, as well as specialized technical services, management, and administration.
+        Founded in 2013, Ontel is a Washington D.C. based company that provides telecommunication contractors, engineering firms, and project management companies software and closeout, and other management services. Our team consists of technicians, experienced managers, and software developers with a variety of skills and experiences which informs our drive to innovate the industry. We've help found some of leading general contractors from the ground up, and have led implementation teams on some of the most ambitious projects for the largest telecommunications companies in the world.
       </div>
     </div>
     <div class="section">
       <div class="heading">Our mission: To empower the world with technology</div>
       <div class="content">
-        Helping to build networks that connect people is our passion. We are proud to provide software and services to help businesses and communities build the next-generation networks that help people stay in contact, live better, and create opportunities.
+        Helping to build networks that connect people is our passion. We are proud to provide software and services to help businesses and communities build the next-generation networks that help people communicate, collaborate, and live better.
       </div>
     </div>
   </div>
