--- a/views/pricing.html
+++ b/views/pricing.html
@@ -12,7 +12,7 @@
             <div class="body">
               <ul>
                 <li>Free initial organization setup and orientation for small businesses of 20 users or less</li>
-                <li><span class="price-emphasis">$99</span> for up to 20 managed users, and unlimited guests - includes 1TB of data per user</li>
+                <li><span class="price-emphasis">$99 per month</span> for up to 20 managed users and unlimited guests - includes 1TB of data per user</li>
 				<li><span class="price-emphasis">Contact us</span> for quotes on additional users and data</li>
               </ul>
             </div>
@@ -29,9 +29,9 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">Base Carrier C.O.P - $225</span> per site-project C.O.P - any carrier package and within 16 business hours</li>
-				<li><span class="price-emphasis">Base Carrier C.O.P using Swift Projects - $199</span> per site-project C.O.P - any carrier package and within 16 business hours for companies that use Swift Projects to manage and execute their projects. Invcluded in this price is our setup of the site requirements in Swift Projects
-                <li><span class="price-emphasis">$74</span> for landlord package (Crown, SBA, etc.), this is charged in addition to the base fee</li>
+                <li><span class="price-emphasis">$225 - per site-project C.O.P</span> Without Swift Projects - any carrier package and within 16 business hours</li>
+				<li><span class="price-emphasis">$199 - per site-project C.O.P</span> With Swift Projects - any carrier package and within 16 business hours for companies that use Swift Projects to manage and execute their projects. Included in this price is our setup of the per-site requirements based on the S.O.W. 
+                <li><span class="price-emphasis">$74 per - per site-project LL Package</span> Landlord packages are in addition to the C.O.P for the carrier (Crown, SBA, etc.).</li>
                 <li><span class="price-emphasis">$39</span> for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for closeout </li>
               </ul>
             </div>
@@ -44,7 +44,7 @@
     <div class="section">
       <div class="heading">Quoted Prices</div>
       <div class="content">
-        The amount of services we provide, along with factors such as project specific requirements, and scheduling could lead to discounts or additional charges.
+        The amount of services we provide, along with factors such as project specific requirements, and scheduling could lead to discounts or additional charges which we will discuss based on project setup.
       </div>
     </div>
   </div>
