--- a/views/pricing.html
+++ b/views/pricing.html
@@ -29,10 +29,10 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225 - per site-project C.O.P</span> Without Swift Projects - any carrier package and within 16 business hours</li>
-				<li><span class="price-emphasis">$199 - per site-project C.O.P</span> With Swift Projects - any carrier package and within 16 business hours for companies that use Swift Projects to manage and execute their projects. Included in this price is our setup of the per-site requirements based on the S.O.W. 
-                <li><span class="price-emphasis">$74 per - per site-project LL Package</span> Landlord packages are in addition to the C.O.P for the carrier (Crown, SBA, etc.).</li>
-                <li><span class="price-emphasis">$39</span> for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for closeout </li>
+                <li><span class="price-emphasis">$225 - per C.O.P without Swift Projects</span> Per-site project without your use of Swift Projects for all carriers.</li>
+				<li><span class="price-emphasis">$199 - per C.O.P with Swift Projects</span> Per-site project with your use of Swift Projects for all carriers. Included in this price is our setup of the per site-project requirements based on the S.O.W. 
+                <li><span class="price-emphasis">$74 per LL Package</span> Landlord packages are in addition to the C.O.P for the carrier (Crown, SBA, ATC, etc.).</li>
+                <li><span class="price-emphasis">$39 per revision round</span> Fee for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for closeout </li>
               </ul>
             </div>
           </div>
