About us update

--- a/views/about.html
+++ b/views/about.html
@@ -6,10 +6,7 @@
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        Founded in 2013, Ontel is a Washington D.C. based company that provides telecommunication contractors, engineering firms, and project management companies software and closeout, and other management services. Our team consists of technicians, experienced managers, and software developers with a variety of skills and experiences which informs our drive to innovate the industry. We've help found some of leading general contractors from the ground up, and have led implementation teams on some of the most ambitious projects for the largest telecommunications companies in the world.
-      </div>
-	  <div class="content">
-        Our corporate mailing address is 327 18th Place NE, Washington D.C. 20002. You may reach us at any time at (202)930-1434
+        Founded in 2013, Ontel is a Washington D.C. based software and management services company catering to telecommunication contractors, engineering firms, and project management companies. Our team consists of customer service oriented technicians, managers, and software developers with a breadth of skills and experiences across all areas of site development and implementation. Prior to Ontel, we led teams on behalf of the largest carriers and engineering firms to successfully deliver the latest telecommunication technologies across the U.S. 
       </div>
     </div>
     <div class="section">
