--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
                 <div class="head">We are Closeout Specialists</div>
                 <div class="sub">Closeout Services that get you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days now over. We've reached a new era of technology where previous paradigms are no longer true and Ontel and its clients are at the forefront of this change. Since our founding, we've been trusted with over 1500+ site-project closeouts all done cheaper, faster, and better. Proof, that with great people and technology, it is possible to have it all. We'll show you how.</div>
+            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days are now over. We've reached a new era of technology, where previous paradigms are no longer true. Ontel helps its clients to stay at the forefront of this change, where since our founding, we've been entrusted with over 1500+ site-project closeouts. All done cheaper, faster, and better. Proof, that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">Closeout MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
